--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -16,13 +16,13 @@
       <input type="checkbox" id="button-submenu" style="display: none;">
       <div class="submenu hide">
         <ul>
-          <a href="./index.html"><li>Inicio</li></a>
-          <a href="./sobre.html"><li>Sobre nós</li></a>
+          <li>Inicio</li>
+          <li>Sobre nós</li>
         </ul>
       </div>
     </div>
     <div class="right">
-      <a href="./login.html"><button class="entrar" id="entrar">Entrar</button></a>
+      <button class="entrar" id="entrar">Entrar</button>
     </div>
   </nav>
   <div class="content"></div>
