--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <title>Cadastro</title>
   <link rel="stylesheet" href="./src/assets/styles/global.css">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
@@ -16,8 +16,8 @@
       <input type="checkbox" id="button-submenu" style="display: none;">
       <div class="submenu hide">
         <ul>
-          <a href="./index.html"><li>Inicio</li></a>
-          <a href="./sobre.html"><li>Sobre nós</li></a>
+          <li>Inicio</li>
+          <li>Sobre nós</li>
         </ul>
       </div>
     </div>
@@ -25,7 +25,18 @@
       <a href="./login.html"><button class="entrar" id="entrar">Entrar</button></a>
     </div>
   </nav>
-  <div class="content"></div>
+  <div class="content">
+    <section class="area-login">
+      <form action="" class="login">
+        <input type="text" placeholder="nome completo">
+        <input type="text" placeholder="e-mail: exemplo@exemplo.com">
+        <input type="password" placeholder="senha:">
+        <input type="password" placeholder="repita a senha">
+        <button type="submit" value="Registrar">Registrar</button>
+        <a href="./recuperacao.html">Esqueceu a senha?</a>
+      </form>
+    </section>
+  </div>
 
   <script src="./src/libs/menu.js"></script>
 </body>
