--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <title>Login</title>
   <link rel="stylesheet" href="./src/assets/styles/global.css">
+  <link rel="stylesheet" href="./src/assets/styles/login.css">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -21,12 +22,18 @@
         </ul>
       </div>
     </div>
-    <div class="right">
-      <a href="./login.html"><button class="entrar" id="entrar">Entrar</button></a>
-    </div>
   </nav>
-  <div class="content"></div>
-
+  <div class="content">
+    <section class="area-login">
+      <form action="" class="login">
+        <input type="text" placeholder="e-mail: exemplo@exemplo.com">
+        <input type="password" placeholder="senha:">
+        <a href="#"><button type="submit">Entrar</button></a>
+        <a href="./cadastro.html"><button type="button">Registrar</button></a>
+        <a href="./recuperacao.html">Esqueceu a senha?</a>
+      </form>
+    </section>
+  </div>
   <script src="./src/libs/menu.js"></script>
 </body>
 </html>
