feat: creating database

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   <div class="content"></div>
 
   <script src="./src/libs/menu.js"></script>
+  <script src="./src/libs/db.js"></script>
 </body>
 </html>
