feat(login): add page style

--- a/login.html
+++ b/login.html
@@ -24,13 +24,17 @@
     </div>
   </nav>
   <div class="content">
+    <section class="area-imagem">
+      <img src="./src/assets/images/heroi-propose.svg" alt="Propose">
+    </section>
+
     <section class="area-login">
       <form action="" class="login">
         <input type="text" placeholder="e-mail: exemplo@exemplo.com">
         <input type="password" placeholder="senha:">
-        <a href="#"><button type="submit">Entrar</button></a>
-        <a href="./cadastro.html"><button type="button">Registrar</button></a>
-        <a href="./recuperacao.html">Esqueceu a senha?</a>
+        <a href="#"><button type="submit" id="entrar">Entrar</button></a>
+        <a href="./cadastro.html"><button type="button" id="registrar">Registrar</button></a>
+        <a href="./recuperacao.html" id="esqueceu-senha">Esqueceu a senha?</a>
       </form>
     </section>
   </div>
