--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
         <input type="text" placeholder="e-mail: exemplo@exemplo.com">
         <input type="password" placeholder="senha:">
         <a href="#"><button type="submit" id="entrar">Entrar</button></a>
-        <a href="./cadastro.html"><button type="button" id="registrar">Registrar</button></a>
+        <a href="./cadastro.html"><button type="button" id="cadastrar">Cadastrar</button></a>
         <a href="./recuperacao.html" id="esqueceu-senha">Esqueceu a senha?</a>
       </form>
     </section>
