feat(recuperacao): add voltar buttom

--- a/recuperacao.html
+++ b/recuperacao.html
@@ -31,6 +31,7 @@
       <form action="" class="recuperacao">
         <input type="text" placeholder="e-mail: exemplo@exemplo.com">
         <a href="#"><button type="submit" id="recuperacao">Recuperar</button></a>
+        <a href="./login.html" id="voltar">Voltar</a>
       </form>
     </section>
   </div>
