refactor!: Reestruturação do projeto

--- a/cadastro.html
+++ b/cadastro.html
@@ -36,7 +36,7 @@
     <section class="area-cadastro">
       <form action="" class="cadastro">
         <input type="text" placeholder="nome completo">
-        <input type="text" placeholder="e-mail: exemplo@exemplo.com">
+        <input type="email" placeholder="e-mail: exemplo@exemplo.com">
         <input type="password" placeholder="senha:">
         <input type="password" placeholder="repita a senha">
 
