--- a/login.html
+++ b/login.html
@@ -30,14 +30,15 @@
 
     <section class="area-login">
       <form action="" class="login">
-        <input type="text" placeholder="e-mail: exemplo@exemplo.com">
+        <input type="email" placeholder="e-mail: exemplo@exemplo.com">
         <input type="password" placeholder="senha:">
-        <a href="#"><button type="submit" id="entrar">Entrar</button></a>
+        <button type="submit" id="entrar">Entrar</button>
         <a href="./cadastro.html"><button type="button" id="cadastrar">Cadastrar</button></a>
         <a href="./recuperacao.html" id="esqueceu-senha">Esqueceu a senha?</a>
       </form>
     </section>
   </div>
   <script src="./src/libs/menu.js"></script>
+  <script src="./src/libs/login.js"></script>
 </body>
 </html>
