--- a/candidato/index.html
+++ b/candidato/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
-  <link rel="stylesheet" href="./src/assets/styles/global.css">
+  <link rel="stylesheet" href="../src/assets/styles/global.css">
+  <link rel="stylesheet" href="../src/assets/styles/candidato-index.css">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,17 +17,33 @@
       <input type="checkbox" id="button-submenu" style="display: none;">
       <div class="submenu hide">
         <ul>
-          <li>Inicio</li>
-          <li>Sobre nós</li>
+          <a href="./teste"><li>Teste vocacional</li></a>
+          <a href="./perfil"><li>Perfil</li></a>
+          <a href="../login.html"><li>sair</li></a>
         </ul>
       </div>
     </div>
     <div class="right">
-      <button class="entrar" id="entrar">Entrar</button>
+      <a href="./perfil.html">
+        <div class="info">
+          <strong class="nome-usuario">Felipe Goulart</strong>
+          <span class="tipo-usuario">Candidato</span>
+        </div>
+        <div class="img-perfil">
+          <img src="../src/assets/images/perfil-icon-candidato.svg" class="foto">
+        </div>
+      </a>
     </div>
   </nav>
-  <div class="content"></div>
-
-  <script src="./src/libs/menu.js"></script>
+  <div class="content">
+    <div class="box-teste-vocacional">
+      <div class="conteudo">
+        <h1>Teste Vocacional</h1>
+        <p>Comece a conhecer a sua vocação. O teste é gratuito e você pode fazer quando quiser</p>
+        <button>Fazer o Teste</button>
+      </div>
+    </div>
+  </div>
+  <script src="../src/libs/menu.js"></script>
 </body>
 </html>
