--- a/candidato/index.html
+++ b/candidato/index.html
@@ -38,7 +38,7 @@
   <div class="content">
     <div class="box-teste-vocacional">
       <div class="conteudo">
-        <h1>Teste Vocacional</h1>
+        <h1>Descubra seu propósito</h1>
         <p>Comece a conhecer a sua vocação. O teste é gratuito e você pode fazer quando quiser</p>
         <button>Fazer o Teste</button>
       </div>
