--- a/candidato/index.html
+++ b/candidato/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
   <link rel="stylesheet" href="../src/assets/styles/global.css">
-  <link rel="stylesheet" href="../src/assets/styles/candidato-index.css">
+  <link rel="stylesheet" href="../src/assets/styles/candidato/index.css">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
       <div class="conteudo">
         <h1>Descubra seu propósito</h1>
         <p>Comece a conhecer a sua vocação. O teste é gratuito e você pode fazer quando quiser</p>
-        <button>Fazer o Teste</button>
+        <a href="./teste"><button>Fazer o Teste</button></a>
       </div>
     </div>
   </div>
