fix(candidato): correction in the test.html link

--- a/candidato/index.html
+++ b/candidato/index.html
@@ -40,7 +40,7 @@
       <div class="conteudo">
         <h1>Descubra seu propósito</h1>
         <p>Comece a conhecer a sua vocação. O teste é gratuito e você pode fazer quando quiser</p>
-        <a href="./teste"><button>Fazer o Teste</button></a>
+        <a href="./teste.html"><button>Fazer o Teste</button></a>
       </div>
     </div>
   </div>
