feat(candidato): scheduling card added

--- a/candidato/teste.html
+++ b/candidato/teste.html
@@ -17,8 +17,9 @@
       <input type="checkbox" id="button-submenu" style="display: none;">
       <div class="submenu hide">
         <ul>
-          <a href="./teste"><li>Teste vocacional</li></a>
-          <a href="./perfil"><li>Perfil</li></a>
+          <a href="./index.html"><li>Início</li></a>
+          <a href="./teste.html"><li>Teste vocacional</li></a>
+          <a href="./perfil.html"><li>Perfil</li></a>
           <a href="../login.html"><li>sair</li></a>
         </ul>
       </div>
