--- a/candidato/index.html
+++ b/candidato/index.html
@@ -17,8 +17,9 @@
       <input type="checkbox" id="button-submenu" style="display: none;">
       <div class="submenu hide">
         <ul>
-          <a href="./teste"><li>Teste vocacional</li></a>
-          <a href="./perfil"><li>Perfil</li></a>
+          <a href="./index.html"><li>Início</li></a>
+          <a href="./teste.html"><li>Teste vocacional</li></a>
+          <a href="./perfil.html"><li>Perfil</li></a>
           <a href="../login.html"><li>sair</li></a>
         </ul>
       </div>
@@ -36,7 +37,27 @@
     </div>
   </nav>
   <div class="content">
-    <div class="box-teste-vocacional">
+    <div class="agendamento-devolutiva">
+      <div class="info-agendamento">
+        <h1 class="titulo-agendamento">Devolutiva Agendada: </h1>
+        <p>Em caso de indisponibilidade de horário envie e-mail para o responsável.</p>
+      </div>
+
+      <div class="data-agendamento">
+        <h3 class="data">18/01/21</h3>
+        <span>09h10min</span>
+      </div>
+
+      <div class="perfil-profissional">
+        <img src="../src/assets/images/perfil-icon-profissional.svg" alt="Carlos Roland">
+        <div class="contato-profissional">
+          <h1>Carlos Roland</h1>
+          <span>carlos.roland@propose.com.br</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="box-teste-vocacional realizado">
       <div class="conteudo">
         <h1>Descubra seu propósito</h1>
         <p>Comece a conhecer a sua vocação. O teste é gratuito e você pode fazer quando quiser</p>
