--- a/recuperacao.html
+++ b/recuperacao.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="./src/assets/styles/recuperacao.css">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <nav class="menu">
     <div class="left">
@@ -29,13 +31,15 @@
   <div class="content">
     <section class="area-recuperacao">
       <form action="" class="recuperacao">
-        <input type="text" placeholder="e-mail: exemplo@exemplo.com">
-        <a href="#"><button type="submit" id="recuperacao">Recuperar</button></a>
+        <input id="email" type="text" placeholder="e-mail: exemplo@exemplo.com">
+        <a href="#"><button type="button" onclick="enviaEmail()" id="recuperacao">Recuperar</button></a>
         <a href="./login.html" id="voltar">Voltar</a>
       </form>
     </section>
   </div>
 
   <script src="./src/libs/menu.js"></script>
+  <script src="./src//libs/recuperacao.js"></script>
 </body>
+
 </html>
