fix: redirecionamento do login

--- a/candidato/index.html
+++ b/candidato/index.html
@@ -39,7 +39,7 @@
   <div class="content">
     <div class="agendamento-devolutiva">
       <div class="info-agendamento">
-        <h1 class="titulo-agendamento">Devolutiva Agendada: </h1>
+        <h1 class="titulo-agendamento">Orientação Agendada: </h1>
         <p>Em caso de indisponibilidade de horário envie e-mail para o responsável.</p>
       </div>
 
