--- a/avaliador/index.html
+++ b/avaliador/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <title>ProPose - Inicio</title>
   <link rel="stylesheet" href="../src/assets/styles/global.css">
-  <link rel="stylesheet" href="../src/assets/styles/avaliador/index.css">
+  <link rel="stylesheet" href="../src/assets/styles/avaliador/index.css"> 
+  <link rel="shortcut icon" href="../src/assets/images/icon.svg">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,9 +19,8 @@
       <div class="submenu hide">
         <ul>
           <a href="./index.html"><li>Início</li></a>
-          <a href="./teste.html"><li>Teste vocacional</li></a>
           <a href="./perfil.html"><li>Perfil</li></a>
-          <a href="../login.html"><li>sair</li></a>
+          <a href="../login.html"><li>Sair</li></a>
         </ul>
       </div>
     </div>
@@ -39,12 +39,12 @@
   <div class="content">
     <h1>Agendamentos</h1>
     <div class="agendamentos">
-      <div class="card-agendamento">
+      <!-- <div class="card-agendamento">
         <div class="perfil-candidato">
           <img src="../src/assets/images/perfil-icon-profissional.svg" alt="Carlos Roland">
 
           <div class="info-candidato">
-            <h1 class="titulo-agendamento">Felipe Goulart</h1>
+            <h1 class="nome-candidato">Felipe Goulart</h1>
             <span class="email-candidato">carlos.roland@propose.com.br</span>
             
             <div class="data-agendamento">
@@ -53,9 +53,8 @@
               <span class="hora">09h10min</span>
             </div>
           </div>
-        </div>
-  
-      </div>
+        </div> 
+      </div> -->
     </div>
     <span class="add-agendamento">
       <i class="fas fa-plus "></i>
