--- a/candidato/orientacao.html
+++ b/candidato/orientacao.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <title>ProPose - Teste</title>
   <link rel="stylesheet" href="../src/assets/styles/global.css">
   <link rel="stylesheet" href="../src/assets/styles/candidato/teste.css">
+  <link rel="shortcut icon" href="../src/assets/images/icon.svg">
+
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,9 +20,9 @@
       <div class="submenu hide">
         <ul>
           <a href="./index.html"><li>Início</li></a>
-          <a href="./teste.html"><li>Teste vocacional</li></a>
+          <a href="./orientacao.html"><li>Orientação Vocacional</li></a>
           <a href="./perfil.html"><li>Perfil</li></a>
-          <a href="../login.html"><li>sair</li></a>
+          <a href="../login.html"><li>Sair</li></a>
         </ul>
       </div>
     </div>
