--- a/login.html
+++ b/login.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>ProPose - Login</title>
   <link rel="stylesheet" href="./src/assets/styles/global.css">
   <link rel="stylesheet" href="./src/assets/styles/login.css">
+  <link rel="shortcut icon" href="./src/assets/images/icon.svg">
   <script src="https://kit.fontawesome.com/8957e9a71b.js" crossorigin="anonymous"></script>
 </head>
 
